# mf-workshop

bidding-contract/: Cargo.toml
bidding-contract/schema/: bidding-contract.json
bidding-contract/src/: error.rs  exec.rs  lib.rs  msg.rs  multitest.rs  query.rs  state.rs
