[package]
name = "bidding-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "1.1.9"
cosmwasm-std = "1.1.9"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.0"
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.37"
